--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,8 +1,6 @@
 /*
- * Creator: Sonic
- * $Author$
- * $Date$
+ * Creator: zhl20160408
  */
-.projA{width:400px;height:300px;border:1px solid #ccc;margin: 20px;padding: 10px}
-	.projA h3{color: #f00;}
-	.hello li{line-height: 28px;border-bottom: 1px solid #eee;margin:0 0 0 10px;}
+.grunt_demo{width:400px;height:300px;border:1px solid #ccc;margin: 20px;padding: 10px}
+.grunt_demo h3{color: #f00;}
+.hello li{line-height: 28px;border-bottom: 1px solid #eee;margin:0 0 0 10px;}
